# vk_parser

./: .gitignore  Dockerfile  README.md  app.py  community_parser.py  docker-compose.yml  exceptions.py  gitlab-ci.yml  loggers.py  old_friendly_users_getter.py  pyproject.toml  saver_for_promo.py  script.py  script2.py  script2_copy.py  settings.py  shell.py
main_api/: async_crud_base.py  config.py  crud_base.py  loggers.py
main_api/api/v1/: api.py
main_api/db/: db.py  mixins.py
main_api/parsingsources/crud/: parsingsourceapi.py  parsingsourceapicredentials.py
main_api/parsingsources/models/: __init__.py  parsingresourceapi.py  parsingresourceapicredentials.py
main_api/parsingtasks/crud/: __init__.py  task.py  taskprops.py  taskresults.py
main_api/parsingtasks/models/: __init__.py  task.py  taskprops.py  taskresults.py
main_api/parsingtasks/routers/: task.py
main_api/service/: pydantic_serializers.py
main_api/service/export/: saver_for_promo.py
main_api/service/routers/: export.py  vk_parsers.py
main_api/service/vk_parsing/: async_community_parser.py  community_parser.py  get_groups_users.py
migrations/: env.py
migrations/versions/: ea4d58081260_initial_migration.py
